--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   padding: 25px;
   background-color: #452871;
   font-family: monospace;
-  font-size: larger;
+  font-size: medium;
   color: #ffff;
   border-style: double;
   border-color: coral;
